--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,41 @@
+aioredis==1.3.1
+asgi-redis==1.4.3
 asgiref==3.2.10
+async-timeout==3.0.1
+attrs==19.3.0
+autobahn==20.7.1
+Automat==20.2.0
+cffi==1.14.1
+channels==2.4.0
+channels-redis==2.4.2
+constantly==15.1.0
+cryptography==3.0
+daphne==2.5.0
 Django==3.0.8
+django-cors-headers==3.4.0
 django-crispy-forms==1.9.1
 django-widget-tweaks==1.4.8
+djangorestframework==3.11.0
+filter==0.0.0.20200724
+hiredis==1.1.0
+hyperlink==19.0.0
+idna==2.10
+incremental==17.5.0
+Markdown==3.2.2
+msgpack==0.6.2
+msgpack-python==0.5.6
+Pillow==7.2.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyHamcrest==2.0.2
+pyOpenSSL==19.1.0
 python-decouple==3.3
 pytz==2020.1
+redis==2.10.6
+service-identity==18.1.0
+six==1.15.0
 sqlparse==0.3.1
-djangorestframework==3.11.0
-Markdown==3.2.2
-filter==0.0.0.20200724
-channels==2.0.4
+Twisted 
+txaio==20.4.1
+zope.interface==5.1.0
